--- a/src/views/partials/search-panel.hbs
+++ b/src/views/partials/search-panel.hbs
@@ -1,11 +1,14 @@
-<div class="search__panel">                
-    <div class="search__inner">
-        <div class="search__wrap">
-            <img class="close__img" src="/images/close.png"/>
-            <input name="search" id="search" placeholder="Search" class="search"/>
+<form action="/video/results" method="get">
+    <div class="search__panel">                
+        <div class="search__inner">
+            <div class="search__wrap">
+                <img class="close__img" src="/images/close.png"/>
+                <input name="search" id="search" placeholder="Search" class="search"/>
+            </div>
+            <button class="btn__submit">
+                <img class="btn__search img" src="/images/loupe.png"/>
+            </button>
+            
         </div>
-        <button class="btn__submit">
-            <img class="btn__search img" src="/images/loupe.png"/>
-        </button>
     </div>
-</div>
+</form>
